navbar v1 overflow fix

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,3 +8,6 @@
 .overflow-auto{
     overflow: auto !important; 
 }
+.overflow-hidden{
+    overflow: hidden !important;
+}
